refeat: 0.36.2 适配 jdk8