@@ -6,11 +6,10 @@ import java.net.HttpURLConnection;
 import java.net.URI;
 import java.net.URL;
 import java.nio.file.Files;
-import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
 import java.util.Collection;
-import java.util.HexFormat;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
@@ -137,7 +136,7 @@ public class Utils {
    * @return {@code true} if the collection is {@code null} or empty, {@code false} otherwise.
    */
   @SuppressWarnings("DeprecatedIsStillUsed")
-  @Deprecated(forRemoval = true)
+  @Deprecated
   public static boolean isCollectionEmpty(Collection<?> collection) {
     return isNullOrEmpty(collection);
   }
@@ -185,8 +184,9 @@ public class Utils {
    */
   public static String generateUUIDFrom(String input) {
       byte[] hashBytes = getSha256Instance().digest(input.getBytes(UTF_8));
-      String hexFormat = HexFormat.of().formatHex(hashBytes);
-      return UUID.nameUUIDFromBytes(hexFormat.getBytes(UTF_8)).toString();
+      StringBuilder sb = new StringBuilder();
+      for (byte b : hashBytes) sb.append(String.format("%02x", b));
+      return UUID.nameUUIDFromBytes(sb.toString().getBytes(UTF_8)).toString();
   }
 
   /**
@@ -262,7 +262,7 @@ public class Utils {
         }
       } else {
         // Handle files
-        return Files.readAllBytes(Path.of(new URI(url)));
+        return Files.readAllBytes(Paths.get(new URI(url)));
       }
     } catch (Exception e) {
       throw new RuntimeException(e);
